--- a/deluge/tasks/main.yml
+++ b/deluge/tasks/main.yml
@@ -1,25 +1,28 @@
 ---
 - name: ensure user deluge is present
-  user: state=present name={{ deluge.deluge_user }} system=yes shell=/bin/sh comment="Deluge Torrents"
-  when: {{ deluge.create_user }}
+  user: state=present name={{ deluge.user }} system=yes shell=/bin/sh comment="Deluge Torrents"
+  when: deluge.create_user
+
+- name: install pycurl      # required for apt_repository
+  apt: pkg=python-pycurl state=installed
 
 - name: add deluge ppa key
   action: apt_repository repo=ppa:deluge-team/ppa state=present
   notify: update apt-cache
 
 - name: install required deluge packages
-  action: apt pkg=$item state=installed
+  action: apt pkg={{ item }} state=installed
   with_items:
     - deluge
     - deluged
     - deluge-web
 
 - name: ensure deluged daemon startup script exists
-  template: src=templates/etc/init/deluged.conf.j2 dest=/etc/init/deluged.conf owner=root group=root mode=0755
+  template: src=etc/init/deluged.conf.j2 dest=/etc/init/deluged.conf owner=root group=root mode=0755
   notify: restart deluged service
 
 - name: ensure deluged webui script exists
-  template: src=templates/etc/init/deluge-web.conf.j2 dest=/etc/init/deluge-web.conf owner=root group=root mode=0755
+  template: src=etc/init/deluge-web.conf.j2 dest=/etc/init/deluge-web.conf owner=root group=root mode=0755
   notify: restart deluged-web service
 
 - name: ensure deluged daemon is started
