--- a/gitolite/tasks/main.yml
+++ b/gitolite/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: check whether gitolite already installed
+  command: /usr/bin/test -e /home/git/admin.pub
+  ignore_errors: True
+  register: gitolite_installed
+
 - name: be sure git is installed
   apt: pkg=git-core state=present
 
@@ -15,7 +20,7 @@
   file: path=/home/git/ owner=git group=git state=directory recurse=yes
 
 - name: checkout gitolite
-  git: dest=/home/git/gitolite repo=https://github.com/sitaramc/gitolite.git 
+  git: dest=/home/git/gitolite repo=https://github.com/sitaramc/gitolite.git update=no
   sudo: yes
   sudo_user: git
 
@@ -33,6 +38,7 @@
   copy: src=admin.pub dest=/home/git mode=0755
   sudo: yes
   sudo_user: git
+  when: gitolite_installed == False
 
 - name: setup gitolite
   command: chdir=/home/git bin/gitolite setup -pk admin.pub creates=/home/git/repositories
